# GitManager

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  MainWindow.cpp  MainWindow.h  README.md  main.cpp
.github/workflows/: build.yml
cmake/: DeployQt.cmake
core/: AppSettings.cpp  AppSettings.h  CredentialStore.cpp  CredentialStore.h  DiffParser.cpp  DiffParser.h  ExternalToolService.cpp  ExternalToolService.h  GitCommandRunner.cpp  GitCommandRunner.h  GitDiagnosticService.cpp  GitDiagnosticService.h  GitManager.cpp  GitManager.h  GitResult.h  GitTypes.h  HookService.cpp  HookService.h  HostingApiService.cpp  HostingApiService.h  HostingService.cpp  HostingService.h  LfsService.cpp  LfsService.h  LibGit2Backend.cpp  LibGit2Backend.h  RepositoryCache.cpp  RepositoryCache.h  RepositoryState.cpp  RepositoryState.h  RepositoryWatcher.cpp  RepositoryWatcher.h
core/parsers/: BranchParser.cpp  BranchParser.h  StatusParser.cpp  StatusParser.h
dialogs/: BranchDialog.cpp  BranchDialog.h  CommitDialog.cpp  CommitDialog.h  ExternalToolsDialog.cpp  ExternalToolsDialog.h  GitDiagnosticsDialog.cpp  GitDiagnosticsDialog.h  HooksDialog.cpp  HooksDialog.h  HostingChangesDialog.cpp  HostingChangesDialog.h  HostingDialog.cpp  HostingDialog.h  HostingIssuesDialog.cpp  HostingIssuesDialog.h  HostingReviewDialog.cpp  HostingReviewDialog.h  LfsDialog.cpp  LfsDialog.h  RebaseDialog.cpp  RebaseDialog.h  RepoManagerDialog.cpp  RepoManagerDialog.h  ResetDialog.cpp  ResetDialog.h  SettingsDialog.cpp  SettingsDialog.h  SubmoduleDialog.cpp  SubmoduleDialog.h  WorktreeDialog.cpp  WorktreeDialog.h
tests/: CMakeLists.txt
tests/integration/: TestRepository.cpp
tests/unit/: TestBranchParser.cpp  TestCommitGraphWidget.cpp  TestCredentialStore.cpp  TestDiffParser.cpp  TestGitDiagnosticService.cpp  TestGitManager.cpp  TestHistoryDialogs.cpp  TestHookService.cpp  TestHostingApiService.cpp  TestHostingService.cpp  TestLfsService.cpp  TestLibGit2Backend.cpp  TestStatusParser.cpp
widgets/: BranchListWidget.cpp  BranchListWidget.h  CommitGraphWidget.cpp  CommitGraphWidget.h  CompareWidget.cpp  CompareWidget.h  DiffWidget.cpp  DiffWidget.h  InteractiveRebaseWidget.cpp  InteractiveRebaseWidget.h  NotificationWidget.cpp  NotificationWidget.h  RepoListWidget.cpp  RepoListWidget.h  StatusWidget.cpp  StatusWidget.h  TerminalWidget.cpp  TerminalWidget.h  WelcomeWidget.cpp  WelcomeWidget.h
